// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastLoginScreen renders correct buttonLabel uses SOCIAL_STRATEGY mapping when there is not a lastUsedUsername 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="Twitter"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="twitter"
/>
`;

exports[`LastLoginScreen renders correct buttonLabel uses lastUsedConnectionName when there is not a lastUsedUsername and no SOCIAL_STRATEGY mapping 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedConnection"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="auth0"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is adfs 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="windows"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is empty, use name instead 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="auth0"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is google-apps 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="google-apps"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is office365 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="windows"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is some-other-strategy 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="auth0"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is this-strategy-exists 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="auth0"
/>
`;

exports[`LastLoginScreen renders correct icon when strategy is waad 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="windows"
/>
`;

exports[`LastLoginScreen renders correctly 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonLabel="lastUsedUsername"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-strategy="auth0"
/>
`;

exports[`LastLoginScreen renders with custom connection theme 1`] = `
<div
  data-__type="quick_auth_pane"
  data-alternativeClickHandler={[Function]}
  data-alternativeLabel="notYourAccountAction"
  data-buttonClickHandler={[Function]}
  data-buttonIcon="icon"
  data-buttonLabel="lastUsedUsername"
  data-foregroundColor="foregroundColor"
  data-header={
    <p>
      lastLoginInstructions
    </p>
  }
  data-primaryColor="primaryColor"
  data-strategy="auth0"
/>
`;
